--- a/style.css
+++ b/style.css
@@ -302,8 +302,21 @@ p {
 .project-button {
     display: inline-block;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 10px 7px;
     background-color: #e67e22;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+}
+.project-source {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 7px;
+    margin-left: 20px;
+    background-color: #053814;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
