education section name update

--- a/style.css
+++ b/style.css
@@ -333,11 +333,11 @@ p {
 
 /* education section */
 
-#education-section {
+#education {
     padding: 50px 20px;
 }
 
-#education-section h2 {
+#education h2 {
     text-align: center;
     font-size: 2.5em;
     margin-bottom: 20px;
